--- a/src/Writing.Core/Writing.Core.csproj
+++ b/src/Writing.Core/Writing.Core.csproj
@@ -60,6 +60,8 @@
       <DependentUpon>HtmlEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Tool.cs" />
+    <Compile Include="Tools\ToolTab.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\HtmlEditor.resx">
@@ -68,6 +70,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="WritingKey.snk" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FormsUI\FormsUI.csproj">
+      <Project>{81c1e803-53aa-4737-a1f8-1611593d002a}</Project>
+      <Name>FormsUI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
