Implementing the loading of the tools.

--- a/src/writing/writing.csproj
+++ b/src/writing/writing.csproj
@@ -47,11 +47,13 @@
     </Reference>
     <Reference Include="ComponentFactory.Krypton.Ribbon, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\ComponentFactory.Krypton.Ribbon.dll</HintPath>
+      <HintPath>..\..\libs\Krypton\ComponentFactory.Krypton.Ribbon.dll</HintPath>
     </Reference>
-    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e" />
+    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e">
+      <HintPath>..\..\libs\Krypton\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="ComponentFactory.Krypton.Workspace">
-      <HintPath>..\..\..\..\Software\Krypton\Bin\ComponentFactory.Krypton.Workspace.dll</HintPath>
+      <HintPath>..\..\libs\Krypton\ComponentFactory.Krypton.Workspace.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -110,6 +112,10 @@
     <ProjectReference Include="..\Writing.Core\Writing.Core.csproj">
       <Project>{2eb6a9fa-1533-47d9-a26e-5efbaa6a632f}</Project>
       <Name>Writing.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Writing.Tools\Writing.Tools.csproj">
+      <Project>{0ffb63e8-a8f3-4077-90af-1d7a052e3c66}</Project>
+      <Name>Writing.Tools</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
