--- a/src/Writing.Tools/Writing.Tools.csproj
+++ b/src/Writing.Tools/Writing.Tools.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EB6A9FA-1533-47D9-A26E-5EFBAA6A632F}</ProjectGuid>
+    <ProjectGuid>{0FFB63E8-A8F3-4077-90AF-1D7A052E3C66}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Writing.Core</RootNamespace>
-    <AssemblyName>Writing.Core</AssemblyName>
+    <RootNamespace>Writing.Tools</RootNamespace>
+    <AssemblyName>Writing.Tools</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -37,9 +37,6 @@
     <AssemblyOriginatorKeyFile>WritingKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -52,42 +49,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWritingContext.cs" />
-    <Compile Include="Controls\HtmlEditor.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\HtmlEditor.Designer.cs">
-      <DependentUpon>HtmlEditor.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Class1.cs" />
+    <Compile Include="Fonts\BoldTool.cs" />
+    <Compile Include="Fonts\FontTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Tools\Tool.cs" />
-    <Compile Include="Tools\ToolGroup.cs" />
-    <Compile Include="Tools\ToolTab.cs" />
-    <Compile Include="Tools\ToolType.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Controls\HtmlEditor.resx">
-      <DependentUpon>HtmlEditor.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\FormsUI\FormsUI.csproj">
+      <Project>{81c1e803-53aa-4737-a1f8-1611593d002a}</Project>
+      <Name>FormsUI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Writing.Core\Writing.Core.csproj">
+      <Project>{2eb6a9fa-1533-47d9-a26e-5efbaa6a632f}</Project>
+      <Name>Writing.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="WritingKey.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bold.png" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="WritingKey.snk" />
+    <None Include="Resources\italic.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\FormsUI\FormsUI.csproj">
-      <Project>{81c1e803-53aa-4737-a1f8-1611593d002a}</Project>
-      <Name>FormsUI</Name>
-    </ProjectReference>
+    <None Include="Resources\strikethrough.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\underline.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
