--- a/src/Writing.Tools/Writing.Tools.csproj
+++ b/src/Writing.Tools/Writing.Tools.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Fonts\BoldTool.cs" />
     <Compile Include="Fonts\FontTool.cs" />
+    <Compile Include="Fonts\ItalicTool.cs" />
+    <Compile Include="Paragraphs\OrderedListTool.cs" />
+    <Compile Include="Paragraphs\UnorderedListTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -73,22 +76,52 @@
     <None Include="WritingKey.snk" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\bold.png" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\italic.png" />
+    <None Include="Resources\Bold_16.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\strikethrough.png" />
+    <None Include="Resources\Bold_32.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\underline.png" />
+    <None Include="Resources\OrderedList_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OrderedList_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\UnorderedList_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\UnorderedList_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Italic_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Italic_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CenterAlign_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CenterAlign_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LeftAlign_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LeftAlign_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RightAlign_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RightAlign_32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
